# HomeBot

./: .gitignore  README.md  config.env  example_config.env  example_config.py  pyproject.toml
homebot/: __init__.py  __main__.py  logging.py  main.py  modules_manager.py
homebot/core/: admin.py  bot.py  config.py  error_handler.py  logging.py  mdlintf.py  modules_manager.py
homebot/lib/libadmin/: __init__.py
homebot/lib/libupload/: __init__.py
homebot/lib/libweather/: __init__.py
homebot/modules/: animated_emoji.py  ci.py  core.py  cowsay.py  speedtest.py  weather.py
homebot/modules/animated_emoji/: __init__.py
homebot/modules/ci/: __init__.py  artifacts.py  main.py  parser.py  project.py  queue_manager.py  upload.py  workflow.py
homebot/modules/ci/projects/: AOSP.py  twrpdtgen.py
homebot/modules/ci/projects/aosp/: __init__.py  constants.py  post.py  project.py  returncode.py
homebot/modules/ci/projects/crdroid/: __init__.py
homebot/modules/ci/projects/crdroid-r/: __init__.py
homebot/modules/ci/projects/derpfest/: __init__.py
homebot/modules/ci/projects/derpfest-r/: __init__.py
homebot/modules/ci/projects/dotos/: __init__.py
homebot/modules/ci/projects/dotos-r/: __init__.py
homebot/modules/ci/projects/fluid/: __init__.py
homebot/modules/ci/projects/fluid-q/: __init__.py
homebot/modules/ci/projects/fluid-r/: __init__.py
homebot/modules/ci/projects/lineageos-q/: __init__.py
homebot/modules/ci/projects/lineageos-r/: __init__.py
homebot/modules/ci_projects/: AOSP.py
homebot/modules/core/: __init__.py  main.py
homebot/modules/cowsay/: __init__.py  main.py
homebot/modules/shell/: __init__.py  main.py
homebot/modules/speedtest/: __init__.py  main.py
homebot/modules/weather/: __init__.py  main.py
(+21 files in other folders)
