[tool.poetry]
name = "homebot"
version = "3.0.0"
description = "A Telegram bot written in Python"
authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^4.0"
GitPython = "^3.1.14"
paramiko = "^2.7.2"
PyGithub = "^1.55"
python-telegram-bot = "^13.5"
python-dotenv = "^0.17.1"
requests = "^2.25.1"
speedtest-cli = "^2.1.3"
twrpdtgen = "^1.2.6"
natsort = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
