[tool.poetry]
name = "homebot"
version = "4.0.0"
description = "A Telegram bot written in Python"
authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^5.0"
GitPython = "^3.1.24"
paramiko = "^2.8.0"
PyGithub = "^1.55"
python-telegram-bot = "^13.7"
python-dotenv = "^1.0.0"
requests = "^2.26.0"
speedtest-cli = "^2.1.3"
twrpdtgen = "^1.3.0"
natsort = "^8.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
