[tool.poetry]
name = "homebot"
version = "4.0.0"
description = "A Telegram bot written in Python"
authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^5.0"
GitPython = "^3.1.31"
paramiko = "^3.0.0"
PyGithub = "^1.58"
python-telegram-bot = "^20.1"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
speedtest-cli = "^2.1.3"
twrpdtgen = "^3.0.0"
natsort = "^8.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
